--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,8 +2,8 @@ name: daily-23f2004125@ds.study.iitm.ac.in
 
 on:
   schedule:
-    - cron: "30 4 * * *" # Runs daily at 4:30 AM UTC
-  workflow_dispatch: # (Optional: allows manual trigger)
+    - cron: "30 4 * * *"
+  workflow_dispatch:
 
 jobs:
   commit-job:
@@ -12,12 +12,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Make a dummy change
         run: |
           echo "Last run: $(date -u)" > last_run.txt
 
-      - name: Commit change
+      - name: Commit and push
         run: |
           git config user.name "GitHub Action"
           git config user.email "23f2004125@ds.study.iitm.ac.in"
