--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,7 +2,7 @@ name: daily-23f2004125@ds.study.iitm.ac.in
 
 on:
   schedule:
-    - cron: "30 4 * * *"
+    - cron: "30 4 * * *"  # Runs daily at 04:30 UTC
   workflow_dispatch:
 
 jobs:
